brat/test/golden/error/vecpat.brat.golden
Error in test/golden/error/vecpat.brat@3:5
fst3(nil) = none
    ^^^^^

  Unification error: Couldn't force 3 to be 0

